--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,45 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: "Gilroy", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* @font-face {
-    font-family: 'Gilroy';
-    src: url(../assets/fonts/Gilroy-Regular.woff);
-    src: local('Gilroy Regular'), local('Gilroy-Regular'), url(../assets/fonts/Gilroy-Regular.woff) format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url(../assets/fonts/Gilroy-Medium.woff);
-    src: local('Gilroy Medium'), local('Gilroy-Medium'), url(../assets/fonts/Gilroy-Medium.woff) format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url(../assets/fonts/Gilroy-SemiBold.woff);
-    src: local('Gilroy SemiBold'), local('Gilroy-SemiBold'), url(../assets/fonts/Gilroy-SemiBold.woff) format('woff');
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url(../assets/fonts/Gilroy-Bold.woff);
-    src: local('Gilroy Bold'), local('Gilroy-Bold'), url(../assets/fonts/Gilroy-Bold.woff) format('woff');
-    font-weight: 700;
-    font-style: normal;
-} */
-
 .header-homepage {
     background-image: url(../assets/universal/background.svg);
     background-size: cover;
