--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 @tailwind components;
 @tailwind utilities;
 .header-homepage {
-    background-image: url(../universal/background.svg);
+    background-image: url("../assets/universal/background.svg");
     background-size: cover;
     width: 100%;
     height: 700px;
