feat: update local font

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,28 +10,28 @@
 @tailwind components;
 @tailwind utilities;
 @font-face {
-    font-family: "Gilroy";
+    font-family: "GilroyBold";
     src: url("/fonts/Gilroy-Bold.woff") format(".woff");
     font-style: normal;
     font-weight: 700;
 }
 
 @font-face {
-    font-family: "Gilroy";
+    font-family: "GilroySemibold";
     src: url("/fonts/Gilroy-Semibold.woff") format(".woff");
     font-style: normal;
     font-weight: 600;
 }
 
 @font-face {
-    font-family: "Gilroy";
+    font-family: "GilroyMedium";
     src: url("/fonts/Gilroy-Medium.woff") format(".woff");
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
-    font-family: "Gilroy";
+    font-family: "GilroyRegular";
     src: url("/fonts/Gilroy-Regular.woff") format(".woff");
     font-style: normal;
     font-weight: 400;
